--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.22"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "dotenv": "^8.6.0",
+    "express": "^4.19.2",
+    "mysql2": "^3.10.2",
     "pg": "^8.11.3",
-    "sequelize": "^5.21.7"
+    "sequelize": "^5.22.5"
   }
 }
